# room-booker-mcp

./: .dockerignore  Dockerfile  main.py  pyproject.toml
app/: config.py  models.py  server.py
app/auth/: context.py  exceptions.py  permissions.py
app/policies/: tool_policy.py
app/services/: booking_store.py
app/tools/: bookings.py  rooms.py
scripts/: test_entra_client.py
tests/: test_tool_policy.py
